# distilbert-movie-recommender

./: .gitignore  pyproject.toml
notebooks/: main_experiment.ipynb  modelling.ipynb
src/: app.py  check_bug.py  data_ingestion.py  main.py  model.py  model_full_ver.py  preprocessing.py  save_mlb.py  testing.py
