[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "accelerate>=1.13.0",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "protobuf<4.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.40.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
